package edu.fiuba.algo3.modelo;

public abstract class Tarot {
    public abstract void modificar(Poker carta);
}
